[package]
name = "axum-streaming-llm"
version = "0.1.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dioxus = { git = "https://github.com/ealmloff/dioxus/", branch = "server-fn-streaming-demo", features = ["fullstack"] }
serde = "1.0.159"
futures = "0.3.30"
kalosm-llama = { git = "https://github.com/floneum/floneum", rev = "a12c0de", optional = true }
tokio = { versino = "1", optional = true }
once_cell = "1.19.0"

[features]
default = []
server = ["dioxus/axum", "kalosm-llama", "tokio"]
web = ["dioxus/web"]
metal = ["kalosm-llama?/metal"]
