[package]
name = "axum-streaming-llm"
version = "0.1.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dioxus = { version = "0.6", features = ["fullstack"] }
serde = "1.0.159"
futures = "0.3.30"
kalosm = { git = "https://github.com/floneum/floneum", rev = "20568cf7d959035394b551af770ef8771dae7903", features = ["language"], optional = true }
tokio = { version = "1", optional = true }
once_cell = "1.19.0"

[features]
default = []
server = ["dioxus/server", "kalosm", "tokio"]
web = ["dioxus/web"]
metal = ["kalosm?/metal"]

[profile]

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"
